fix: the quantity button's dropdown no longer goes off the screen of the product page when on mobile
changed the position of the dropdown when on mobile to resolve this

--- a/src/styles/QuantityDropdownBtn.css
+++ b/src/styles/QuantityDropdownBtn.css
@@ -84,3 +84,9 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+@media (max-width: 600px) {
+  .product-page .quantity-dropdown {
+    margin-left: 0rem;
+  }
+}
